# Scalp

./: AGENTS.md  BLUEPRINT.md  PLAN.md  README.md  app.py  pyproject.toml
boot/: __init__.py  environment_check.py
config/: __init__.py  base.yaml  loader.py  models.py
context/: __init__.py  regime_engine.py  session_model.py
core/: clocks.py  enums.py  events.py  result.py  types.py
execution/: __init__.py  order_validator.py
features/: __init__.py  feature_snapshot.py
marketdata/: __init__.py  binance_depth_sync.py  local_book.py  ws_reconnect.py
monitoring/: __init__.py
replay/: __init__.py
risk/: __init__.py  degraded_mode.py  position_sizer.py
shutdown/: __init__.py  graceful_shutdown.py
signals/: __init__.py  hard_gates.py  scorer.py  signal_router.py
storage/: __init__.py
tests/unit/: test_binance_depth_sync.py  test_config_loader.py  test_degraded_mode.py  test_local_book.py  test_order_validator.py  test_position_sizer.py  test_signal_router.py  test_ws_reconnect.py
typings/sortedcontainers/: __init__.pyi
