[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "volf-hyper-apex"
version = "0.1.0"
description = "VOLF HYPER APEX 2026 intraday mean-reversion engine"
requires-python = ">=3.12"
dependencies = [
  "aiohttp>=3.9",
  "websockets>=12.0",
  "orjson>=3.9",
  "pyarrow>=15.0",
  "numpy>=1.26",
  "sortedcontainers>=2.4",
  "structlog>=24.0",
  "ntplib>=0.4",
  "uvloop>=0.19; platform_system == 'Linux'",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "mypy>=1.10",
  "ruff>=0.5",
  "types-PyYAML>=6.0",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_return_any = true
warn_unreachable = true
show_error_codes = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]

[tool.setuptools]
packages = ["core", "config", "boot", "marketdata", "context", "features", "signals", "execution", "risk", "storage", "replay", "monitoring", "shutdown"]
